syntax = "proto3";
import "google/protobuf/empty.proto";

service Messaging {
  // Sends the message to all users. This function doesn't return anything.
  rpc Send(UserMessage) returns (google.protobuf.Empty);
}

message UserMessage {
  string content = 1;
  // The user who sent the message
  string user = 2;
}